--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
           <h2>HAPPY</h2>
 
-          <h4> FROM DESPICABLE ME</h4>
+          <h4>| FROM DESPICABLE ME |</h4>
 
         </div>
       </div>
@@ -31,15 +31,14 @@
 
 
         <span>PHARRELLWILLIAMS.COM</span>
-
-         <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png]" />
+     
+         <img src="images/columbia-logo.png">
 
         <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
-        <img src="//s3.amazonaws.com/learn-verified/sony-logo.png]" />
-
+        <img src= "images/sony-logo.png">
       </div>
     </div>
   </body>
